--- a/app/src/main/res/layout/fragment_general.xml
+++ b/app/src/main/res/layout/fragment_general.xml
@@ -5,7 +5,7 @@
     android:id="@+id/frameLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".general.GeneralFragment">
+    tools:context=".presentation.general.GeneralFragment">
 
     <Switch
         android:id="@+id/switchGeneralBack"
