--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/mainFragment"
-        android:name="com.example.mvvmkiparo.main.MainFragment"
+        android:name="com.example.mvvmkiparo.presentation.main.MainFragment"
         android:label="MainFragment" >
         <action
             android:id="@+id/action_mainFragment_to_generalFragment"
@@ -15,7 +15,7 @@
     </fragment>
     <fragment
         android:id="@+id/generalFragment"
-        android:name="com.example.mvvmkiparo.general.GeneralFragment"
+        android:name="com.example.mvvmkiparo.presentation.general.GeneralFragment"
         android:label="fragment_general"
         tools:layout="@layout/fragment_general" >
         <action
@@ -27,7 +27,7 @@
     </fragment>
     <fragment
         android:id="@+id/secondFragment"
-        android:name="com.example.mvvmkiparo.second.SecondFragment"
+        android:name="com.example.mvvmkiparo.presentation.second.SecondFragment"
         android:label="fragment_second"
         tools:layout="@layout/fragment_second" >
         <action
